
=head1 WHAT'S NEW IN TANGRAM

=head1 RELEASE 2.09, slated for October 2005

Unless more critical bugs are reported, the latest 2.08_XX release
will be released as 2.09 in August^WSeptember^WOctober^WRSN!

=head2 DEV. RELEASE 2.08_06, 18 Nov 2005

=over

=item *

Test suite changes: add a test for weakref, fix bad prefetch test that
was causing false negatives.

=item *

Make Scalar::Util the hard dependency that it is.

=item *

Fix the default C<get_id> function debug output, related to the test
for weakref.

=back

=head2 DEV. RELEASE 2.08_05, 20 Oct 2005

=over

=item *

Previous aggregation function change broke
C<$storage-E<gt>count($filter)>.  Fixed.

=item *

Fixed outer joins again.  They've even documented now!  C<:D> See
L<Tangram::Storage/select>.

=item *

Fix F<Makefile.PL> so as not to deliver F<Changes.pod>.

=back

=head2 DEV. RELEASE 2.08_04, 13 Oct 2005

=over

=item *

A very nasty but also obscure bug affecting horizontal mapping and
polymorphic retrieval (or aggregation) was reported by Alex.

The fix for it has made remote expressions always include filtering
(via WHERE) on the type column as well as the ID column in most
queries.  This should not affect the result of queries; it is just
passing on an assertion in the code base through to the database
back-end.  The times it will affect results are when your currently
active schema does not match the one used to create the database and
you were previously relying on side-effects.

Examples of the query differences will follow here before the 2.09
release.

=back

This version has broken outer joins; to be fixed in the next release.

Also, this Changes.pod seems to being delivered to some random place
in your C<@INC>; sorry about that, the next release will exclude it
via the appropriate L<ExtUtils::MakeMaker> voodoo.

=head2 DEV. RELEASE 2.08_03, 31 Aug 2005

=over

=item *

Make F<Makefile.PL> output display modules that failed, rather than
letting C<ExtUtils::MakeMaker> do it for it.
